		the rar is used to unarchive instead of unrar when available,
		rar is compiled static and prefered.
		Added support for the nomarch unarchiver.
		Removed from Screen 1.13 the unused switches Res Future and
		Repl ext. Fixed some help texts.
		Added in screen 1.14 settings for Plus All, Notify, Passwd and
		Pause.
		Removed the default Virnet record from the fidonet setup.

	mbfido:
		With ticfile processing, the KeepDate setup setting now works.
		The FileMgr requests now honor the setting of the switches
		Plus All, Notify, Passwd, Message, Tic on/off and Pause.
		The AreaMgr reuqests now honor the setting of the switches
		Plus All, Notify, Passwd and Pause.

	mbtask:
		Removed debug logging of "does" info.


v0.35.04	29-Sep-2002 - 19-Oct-2002.

	general:
		Added mail and files security flags for nodes.

	upgrade:
		Start mbsetup, enter global configuration and exit and save.
		This will set defaults for area-/filemgr logging and security.
		The noderecords are updated with new security flags.
		The filegroups, ticgroups, tic areas and message areas are 
		updated with default security flags.

        clcomm.a:
                Added Mgrlog function, logs default to manager.log. Does also
                log to Syslog with level '+'.

	mbfido:
		Area- and FileMgr requests are now also logged in manager.log
                Auto created and removed areas are also logged in manager.log
		Auto created area now get the link security from the group.
		With message areas auto update it should now only delete
		missing echomail areas.
		File attaches to our own points were placed in the node's
		outbound directory instead of the point outbound.
		Files and echomail security flags implemented.
		Echomail rescan will also work with newsgroups.
		Removed some debug logging with files replace.
		Fixed trashing news dupes file when mbfido was called multiple
		times. Improved program locking.
		Netmail received for a zone/net without netmail board will be