@@ -12,7 +12,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<div align=right><h5>Last update 28-Sep-2002</h5></div>
+<div align=right><h5>Last update 31-Oct-2002</h5></div>
 
 <div align=center><H1>MBSE BBS Setup - Fidonet nodes.</H1></div>
 <P>
@@ -61,7 +61,7 @@ netmail to this node.</td></tr>
 to this node.</td></tr>
 <tr><th nowrap align=left valign=top>Netmail hold</th><td>Put mail on "hold" for this
 node.</td></tr>
-<tr><th nowrap align=left valign=top>Pack netmail</th><td>Should netmail be packed in
+<tr><th nowrap align=left valign=top>Pack mail</th><td>Should net- and echomail be packed in
 arcmail archives.</td></tr>
 <tr><th nowrap align=left valign=top>Send notify</th><td>Send automatic generated
 notify messages.</td></tr>
